--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Billet simple pour l'Alaska</title>
-    <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/gif" href="./resources/images/favicon.png"/>
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="./classes/styles/header.css">
     <link rel="stylesheet" href="./classes/styles/mainmenu.css">
     <link rel="stylesheet" href="./classes/styles/authorprofile.css">
@@ -82,11 +82,16 @@
             <h1>L'Aventure</h1>
             <div class="last-post">
                 <div class="last-post-content">
-                    <textarea autofocus>
-                        "Ce qui compte ce n'est pas le voyage... &#10;... c'est le solde de mon compte en banque"&#10;- Guillaume Musso
-                    </textarea>
+                    <h2>Titre du dernier chapitre</h2>
+                    <br/>
+                    <p>
+                        Début du nouveau chapitre, idéalement une sélection d'une cinquantaine de mots, 
+                        les 50 premiers écrits auxquels on concatenne "..." afin de faire commencer la lecture
+                        au visiteur, puis d'aller en découvrir plus : 
+                    </p>
                 </div>
             </div>
+            <button>Lire la suite</button>
         </section>
     </div>
 
