--- a/index.html
+++ b/index.html
@@ -58,11 +58,13 @@
         </section>
         <section id="auteur">
             <h1>L'Auteur : Jean Forteroche</h1>
-            <div class="box">
-                <div class="content">
-                    <img src="./resources/images/auteur.jpeg" alt="Photo de l'auteur">
-                    <h2>A propos de l'auteur<br/><span>Sa vie, son oeuvre</span></h2>
-                    <button class="bio_toggle">Biographie</button>
+            <div class="outer-box">
+                <div class="box">
+                    <div class="content">
+                        <img src="./resources/images/auteur.jpeg" alt="Photo de l'auteur">
+                        <h2>A propos de l'auteur<br/><span>Sa vie, son oeuvre</span></h2>
+                        <button class="bio_toggle">Biographie</button>
+                    </div>
                 </div>
             </div>
             <p class="displayed_bio">
