some improvements css

--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
                 <li><a href="#accueil"><ion-icon name="home-outline"></ion-icon>Accueil</a></li>
                 <li><a href="#auteur"><ion-icon name="body-outline"></ion-icon>L'Auteur</a></li>
                 <li><a href="#adventure"><ion-icon name="book-outline"></ion-icon>L'Aventure</a></li>
-                <li><a href="#accueil"><ion-icon name="log-out-outline"></ion-icon>Mon Profil</a></li>
+                <li><a href="#accueil"><ion-icon name="person-outline"></ion-icon>Mon Profil</a></li>
+                <li><a href="./View/login.html"><ion-icon name="log-in-outline"></ion-icon>Se connecter</a></li>
                 <li><a href="#accueil"><ion-icon name="log-out-outline"></ion-icon>Se Déconnecter</a></li>
             </ul>
         </nav>
@@ -58,27 +59,29 @@
         </section>
         <section id="auteur">
             <h1>L'Auteur : Jean Forteroche</h1>
-            <div class="outer-box">
-                <div class="box">
-                    <div class="content">
-                        <img src="./resources/images/auteur.jpeg" alt="Photo de l'auteur">
-                        <h2>A propos de l'auteur<br/><span>Sa vie, son oeuvre</span></h2>
-                        <button class="bio_toggle">Biographie</button>
+                <div class="full-bio">
+                    <div class="outer-box">
+                        <div class="box">
+                            <div class="content">
+                                <img src="./resources/images/auteur.jpeg" alt="Photo de l'auteur">
+                                <h2>A propos de l'auteur<br/><span>Sa vie, son oeuvre</span></h2>
+                                <button class="bio_toggle">Biographie</button>
+                            </div>
+                        </div>
                     </div>
+                    <p class="displayed_bio">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.<br/><br/> 
+                        Architecto dolor dolore id aperiam laudantium vero tempore placeat minima autem inventore, 
+                        doloribus, deserunt excepturi! Iure laborum doloremque sint quisquam, fuga quas error corrupti 
+                        voluptate deleniti porro quasi eum saepe reprehenderit, nemo id ratione architecto minima. 
+                        Deserunt, eaque ducimus assumenda reiciendis illo vitae ipsam quis est eveniet maxime, 
+                        sint doloremque. Impedit, ut voluptatibus nesciunt perferendis libero quo perspiciatis 
+                        nemo possimus nihil. Temporibus excepturi nulla architecto iusto amet accusamus magni eos odit 
+                        vero quae corporis error ipsam, laudantium, soluta dolores enim ullam tenetur sed unde dolore 
+                        deserunt dolorem!<br/><br/>
+                        Expedita accusantium aspernatur sed vitae.
+                    </p>
                 </div>
-            </div>
-            <p class="displayed_bio">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.<br/><br/> 
-                Architecto dolor dolore id aperiam laudantium vero tempore placeat minima autem inventore, 
-                doloribus, deserunt excepturi! Iure laborum doloremque sint quisquam, fuga quas error corrupti 
-                voluptate deleniti porro quasi eum saepe reprehenderit, nemo id ratione architecto minima. 
-                Deserunt, eaque ducimus assumenda reiciendis illo vitae ipsam quis est eveniet maxime, 
-                sint doloremque. Impedit, ut voluptatibus nesciunt perferendis libero quo perspiciatis 
-                nemo possimus nihil. Temporibus excepturi nulla architecto iusto amet accusamus magni eos odit 
-                vero quae corporis error ipsam, laudantium, soluta dolores enim ullam tenetur sed unde dolore 
-                deserunt dolorem!<br/><br/>
-                Expedita accusantium aspernatur sed vitae.
-            </p>
         </section>
         <section id="adventure">
             <h1>L'Aventure</h1>
