Css ok pour mobile

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h1 class="titre">Billet simple pour l'Alaska</h1>
         <p class="author">Une histoire de </p>
         <h2 class="gad">Jean Forteroche</h2>
-        <img src="./resources/images/pencil.png" alt="Stylo de l'auteur" class="stylo">
+        <a href="#accueil" class="access-button">Accéder au site</a>
     </header>
     <div class="site">
         <nav class="main_menu">        
@@ -39,9 +39,6 @@
             </ul>
         </nav>
         <section class="projet" id="accueil">
-            <!-- <div class="illustration">
-                <img src="./resources/images/alaska3.jpg" alt="Camp de base">
-            </div> -->
             <h1>Le Projet :</h1>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla nesciunt error quaerat, magni, 
@@ -60,13 +57,11 @@
         <section id="auteur">
             <h1>L'Auteur : Jean Forteroche</h1>
                 <div class="full-bio">
-                    <div class="outer-box">
-                        <div class="box">
-                            <div class="content">
-                                <img src="./resources/images/auteur.jpeg" alt="Photo de l'auteur">
-                                <h2>A propos de l'auteur<br/><span>Sa vie, son oeuvre</span></h2>
-                                <button class="bio_toggle">Biographie</button>
-                            </div>
+                    <div class="box">
+                        <div class="content">
+                            <img src="./resources/images/auteur.jpeg" alt="Photo de l'auteur">
+                            <h2>A propos de l'auteur<br/><span>Sa vie, son oeuvre</span></h2>
+                            <button class="bio_toggle">Biographie</button>
                         </div>
                     </div>
                     <p class="displayed_bio">
@@ -96,7 +91,7 @@
                     </p>
                 </div>
             </div>
-            <button>Lire la suite</button>
+            <a href="#">Lire la suite</a>
         </section>
     </div>
 
