--- a/index.html
+++ b/index.html
@@ -7,9 +7,14 @@
     <title>Billet simple pour l'Alaska</title>
     <link rel="icon" type="image/gif" href="./resources/images/favicon.png"/>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="./classes/styles/header.css">
+    <link rel="stylesheet" href="./classes/styles/mobile/header.css">
+    <link rel="stylesheet" href="./classes/styles/tablet/header.css" media="screen AND (min-width: 600px)">
+    <link rel="stylesheet" href="./classes/styles/desktop/header.css" media="screen AND (min-width: 1024px)">
     <link rel="stylesheet" href="./classes/styles/mainmenu.css">
     <link rel="stylesheet" href="./classes/styles/authorprofile.css">
+    <link rel="stylesheet" href="./classes/styles/mobile/authorprofile.css">
+    <link rel="stylesheet" href="./classes/styles/tablet/authorprofile.css" media="screen AND (min-width: 600px)">
+    <link rel="stylesheet" href="./classes/styles/mobile/desktop/authorprofile.css" media="screen AND (min-width: 1024px)">
     <link rel="stylesheet" href="./classes/styles/project.css">
     <link rel="stylesheet" href="./classes/styles/lastpost.css">
 </head>
