almost full responsive

--- a/index.html
+++ b/index.html
@@ -6,15 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Billet simple pour l'Alaska</title>
     <link rel="icon" type="image/gif" href="./resources/images/favicon.png"/>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./classes/styles/mobile/style.css">
+    <link rel="stylesheet" href="./classes/styles/tablet/style.css" media="screen AND (min-width: 600px)">
+    <link rel="stylesheet" href="./classes/styles/desktop/style.css" media="screen AND (min-width: 1024px)">
     <link rel="stylesheet" href="./classes/styles/mobile/header.css">
     <link rel="stylesheet" href="./classes/styles/tablet/header.css" media="screen AND (min-width: 600px)">
     <link rel="stylesheet" href="./classes/styles/desktop/header.css" media="screen AND (min-width: 1024px)">
     <link rel="stylesheet" href="./classes/styles/mainmenu.css">
-    <link rel="stylesheet" href="./classes/styles/authorprofile.css">
     <link rel="stylesheet" href="./classes/styles/mobile/authorprofile.css">
     <link rel="stylesheet" href="./classes/styles/tablet/authorprofile.css" media="screen AND (min-width: 600px)">
-    <link rel="stylesheet" href="./classes/styles/mobile/desktop/authorprofile.css" media="screen AND (min-width: 1024px)">
+    <link rel="stylesheet" href="./classes/styles/desktop/authorprofile.css" media="screen AND (min-width: 1024px)">
     <link rel="stylesheet" href="./classes/styles/project.css">
     <link rel="stylesheet" href="./classes/styles/lastpost.css">
 </head>
@@ -31,7 +32,7 @@
                 <div class="user">
                     <img src="./resources/images/profile_picture.jpg" alt="Photo de profil" class="profile-picture">
                 </div>
-                <p class="user_name">User NAME</p>
+                <p class="user_name"></p>
                 <div class="menu_toggle"></div>
             </div>
             <ul class="menu_access">
