--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <div class="user">
                     <img src="./resources/images/profile_picture.jpg" alt="Photo de profil" class="profile-picture">
                 </div>
-                <p class="user_name"></p>
+                <p class="user_name">User name</p>
                 <div class="menu_toggle"></div>
             </div>
             <ul class="menu_access">
