--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Billet simple pour l'Alaska</title>
-    <link rel="icon" type="image/gif" href="./resources/images/favicon.png"/>
-    <link rel="stylesheet" href="./classes/styles/mobile/style.css">
-    <link rel="stylesheet" href="./classes/styles/tablet/style.css" media="screen AND (min-width: 600px)">
-    <link rel="stylesheet" href="./classes/styles/desktop/style.css" media="screen AND (min-width: 1024px)">
-    <link rel="stylesheet" href="./classes/styles/mobile/header.css">
-    <link rel="stylesheet" href="./classes/styles/tablet/header.css" media="screen AND (min-width: 600px)">
-    <link rel="stylesheet" href="./classes/styles/desktop/header.css" media="screen AND (min-width: 1024px)">
-    <link rel="stylesheet" href="./classes/styles/mainmenu.css">
-    <link rel="stylesheet" href="./classes/styles/mobile/authorprofile.css">
-    <link rel="stylesheet" href="./classes/styles/tablet/authorprofile.css" media="screen AND (min-width: 600px)">
-    <link rel="stylesheet" href="./classes/styles/desktop/authorprofile.css" media="screen AND (min-width: 1024px)">
-    <link rel="stylesheet" href="./classes/styles/project.css">
-    <link rel="stylesheet" href="./classes/styles/lastpost.css">
+    <link rel="icon" type="image/gif" href="./public/images/favicon.png"/>
+    <link rel="stylesheet" href="./public/styles/mobile/style.css">
+    <link rel="stylesheet" href="./public/styles/tablet/style.css" media="screen AND (min-width: 600px)">
+    <link rel="stylesheet" href="./public/styles/desktop/style.css" media="screen AND (min-width: 1024px)">
+    <link rel="stylesheet" href="./public/styles/mobile/header.css">
+    <link rel="stylesheet" href="./public/styles/tablet/header.css" media="screen AND (min-width: 600px)">
+    <link rel="stylesheet" href="./public/styles/desktop/header.css" media="screen AND (min-width: 1024px)">
+    <link rel="stylesheet" href="./public/styles/mainmenu.css">
+    <link rel="stylesheet" href="./public/styles/mobile/authorprofile.css">
+    <link rel="stylesheet" href="./public/styles/tablet/authorprofile.css" media="screen AND (min-width: 600px)">
+    <link rel="stylesheet" href="./public/styles/desktop/authorprofile.css" media="screen AND (min-width: 1024px)">
+    <link rel="stylesheet" href="./public/styles/project.css">
+    <link rel="stylesheet" href="./public/styles/lastpost.css">
 </head>
 <body>
     <header id="bg" class="header">
@@ -30,7 +30,7 @@
         <nav class="main_menu">        
             <div class="sup">
                 <div class="user">
-                    <img src="./resources/images/profile_picture.jpg" alt="Photo de profil" class="profile-picture">
+                    <img src="./public/images/profile_picture.jpg" alt="Photo de profil" class="profile-picture">
                 </div>
                 <p class="user_name">User name</p>
                 <div class="menu_toggle"></div>
@@ -101,7 +101,7 @@
         </section>
     </div>
 
-<script type="module" src="script.js"></script>
+<script type="module" src="./public/scripts/script.js"></script>
 <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
